<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t_rl_s"
        android:id="@+id/btnDelete"
        android:layout_marginBottom="23dp"
        android:layout_marginRight="47dp"
        android:layout_marginEnd="47dp"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/btnSave"
        android:layout_toStartOf="@+id/btnSave" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ment_s"
        android:id="@+id/btnSave"
        android:layout_marginRight="36dp"
        android:layout_marginEnd="36dp"
        android:layout_alignBaseline="@+id/btnDelete"
        android:layout_alignBottom="@+id/btnDelete"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/n_v_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/edit_eT_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="31dp"
        android:layout_marginStart="31dp"
        android:id="@+id/edit_tv_name"
        android:textSize="20sp"
        tools:ignore="RelativeOverlap" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/edit_eT_barcode"
        android:layout_alignBottom="@+id/edit_tv_barcode"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/vonalk_d_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:id="@+id/edit_tv_barcode"
        android:textSize="20sp"
        android:layout_below="@+id/edit_tv_name"
        android:layout_alignLeft="@+id/edit_tv_name"
        android:layout_alignStart="@+id/edit_tv_name" />

    <TextView
        android:text="@string/darab_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_tv_piece"
        android:textSize="20sp"
        android:layout_above="@+id/edit_eT_price"
        android:layout_alignLeft="@+id/edit_tv_barcode"
        android:layout_alignStart="@+id/edit_tv_barcode" />

    <EditText
        android:textAlignment="center"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/edit_eT_name"
        android:layout_marginTop="78dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/egys_g_r_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_tv_price"
        android:textSize="20sp"
        android:layout_alignBottom="@+id/edit_eT_price"
        android:layout_alignLeft="@+id/edit_tv_piece"
        android:layout_alignStart="@+id/edit_tv_piece" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/edit_eT_piece"
        android:layout_below="@+id/edit_eT_barcode"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/edit_eT_price"
        android:layout_below="@+id/edit_eT_piece"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>